--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -84,6 +84,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Base\BindableBase.cs" />
+    <Compile Include="Base\RelayCommand.cs" />
     <Compile Include="BLL\IService\ICurrencyService.cs" />
     <Compile Include="BLL\Service\CurrencyService.cs" />
     <Compile Include="DAL\Models\BaseModel.cs" />
@@ -105,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAL\SQLite\SQLite.cs" />
     <Compile Include="DAL\SQLite\SQLiteAsync.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -146,6 +149,7 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
