--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAL\SQLite\SQLite.cs" />
     <Compile Include="DAL\SQLite\SQLiteAsync.cs" />
+    <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
