--- a/FinanceManager/packages.config
+++ b/FinanceManager/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ninject" version="2.0.1.0" targetFramework="wpa81" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
+  <package id="Unity" version="3.5.1405-prerelease" targetFramework="wpa81" />
 </packages>
