Artem added NavigationService, Resolved IoC, added backbutton support

--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -87,7 +87,9 @@
     <Compile Include="Base\BindableBase.cs" />
     <Compile Include="Base\RelayCommand.cs" />
     <Compile Include="BLL\IService\ICurrencyService.cs" />
+    <Compile Include="BLL\IService\INavigationService.cs" />
     <Compile Include="BLL\Service\CurrencyService.cs" />
+    <Compile Include="BLL\Service\NavigationService.cs" />
     <Compile Include="DAL\Models\BaseModel.cs" />
     <Compile Include="DAL\Models\Category.cs" />
     <Compile Include="DAL\Models\Currencies.cs" />
