--- a/FinanceManager/packages.config
+++ b/FinanceManager/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
-  <package id="Unity" version="3.5.1405-prerelease" targetFramework="wpa81" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="wpa81" />
+  <package id="SQLite.Net.Async-PCL" version="3.0.5" targetFramework="wpa81" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="wpa81" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="wpa81" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="wpa81" />
+  <package id="SQLiteNetExtensions.Async" version="1.3.0" targetFramework="wpa81" />
+  <package id="Unity" version="4.0.1" targetFramework="wpa81" />
 </packages>
