--- a/FinanceManager/FinanceManager.csproj
+++ b/FinanceManager/FinanceManager.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -14,8 +14,6 @@
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{76F1466A-8B6D-4E39-A767-685A06062A39};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -81,68 +79,47 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Base\BindableBase.cs" />
-    <Compile Include="Base\RelayCommand.cs" />
-    <Compile Include="BLL\IService\ICategoriesService.cs" />
-    <Compile Include="BLL\IService\ICurrencyService.cs" />
-    <Compile Include="BLL\IService\INavigationService.cs" />
-    <Compile Include="BLL\Service\CategoriesService.cs" />
-    <Compile Include="BLL\Service\CurrencyService.cs" />
-    <Compile Include="BLL\Service\NavigationService.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
-    <Compile Include="DAL\FinanceDatabaseHelper.cs" />
-    <Compile Include="DAL\Models\Category.cs" />
-    <Compile Include="DAL\Models\Currency.cs" />
-    <Compile Include="DAL\Models\MoneyBox.cs" />
-    <Compile Include="DAL\Models\Transaction.cs" />
-    <Compile Include="DAL\Models\TransactionType.cs" />
-    <Compile Include="DAL\Models\User.cs" />
-    <Compile Include="DAL\Repository\GenericRepository.cs" />
-    <Compile Include="DAL\Repository\IGenericRepository.cs" />
-    <Compile Include="DAL\UnitOfWork\IUnitOfWork.cs" />
-    <Compile Include="DAL\UnitOfWork\UnitOfWork.cs" />
-    <Compile Include="Helpers\BooleanToVisibilityConverter.cs" />
-    <Compile Include="Pages\Categories.xaml.cs">
-      <DependentUpon>Categories.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\Currencies.xaml.cs">
-      <DependentUpon>Currencies.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\CreateMoneyBoxPage.xaml.cs">
+    <Compile Include="Infrastructure\DependencyResolver.cs" />
+    <Compile Include="Infrastructure\INavigationService.cs" />
+    <Compile Include="Infrastructure\NavigationService.cs" />
+    <Compile Include="Model\DataAccess\Repository\DataRepository.cs" />
+    <Compile Include="Model\DataAccess\Repository\IDataRepository.cs" />
+    <Compile Include="Model\DataAccess\Services\DataService.cs" />
+    <Compile Include="Model\DataAccess\Services\IDataService.cs" />
+    <Compile Include="Model\DataAccess\UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="Model\DataAccess\UnitOfWork\UnitOfWork.cs" />
+    <Compile Include="Model\Entities\Category.cs" />
+    <Compile Include="Model\Entities\Currency.cs" />
+    <Compile Include="Model\Entities\MoneyBox.cs" />
+    <Compile Include="Model\Entities\Transaction.cs" />
+    <Compile Include="Model\Entities\Enums\TransactionType.cs" />
+    <Compile Include="Model\Entities\User.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Dependencies\SQLite.cs" />
+    <Compile Include="Dependencies\SQLiteAsync.cs" />
+    <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="ViewModel\CreateMoneyBoxViewModel.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="View\CreateMoneyBoxPage.xaml.cs">
       <DependentUpon>CreateMoneyBoxPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\EditExpenseCategory.xaml.cs">
-      <DependentUpon>EditExpenseCategory.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\EditIncomeCategory.xaml.cs">
-      <DependentUpon>EditIncomeCategory.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\MainPage.xaml.cs">
+    <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\MoneyBoxPage.xaml.cs">
+    <Compile Include="View\MoneyBoxPage.xaml.cs">
       <DependentUpon>MoneyBoxPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\SelectMoneyBoxPage.xaml.cs">
-      <DependentUpon>SelectMoneyBoxPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\Show.xaml.cs">
-      <DependentUpon>Show.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\UpdateOrDelete.xaml.cs">
-      <DependentUpon>UpdateOrDelete.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\CategoriesViewModel.cs" />
-    <Compile Include="ViewModel\CurrenciesViewModel.cs" />
-    <Compile Include="ViewModel\ViewModelLocator.cs" />
-    <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -162,57 +139,28 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Pages\Categories.xaml">
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="View\CreateMoneyBoxPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\Currencies.xaml">
+    <Page Include="View\MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\CreateMoneyBoxPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\EditExpenseCategory.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\EditIncomeCategory.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\MoneyBoxPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\SelectMoneyBoxPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\Show.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\UpdateOrDelete.xaml">
+    <Page Include="View\MoneyBoxPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="Microsoft.VCLibs, Version=12.0">
+    <SDKReference Include="Microsoft.VCLibs, version=12.0">
       <Name>Microsoft Visual C++ 2013 Runtime Package for Windows Phone</Name>
     </SDKReference>
-    <SDKReference Include="SQLite.WP81, Version=3.11.0">
+    <SDKReference Include="SQLite.WP81, Version=3.11.1">
       <Name>SQLite for Windows Phone 8.1</Name>
     </SDKReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -223,33 +171,6 @@
       <HintPath>..\packages\Unity.4.0.1\lib\portable-net45+wp80+win8+wpa81+MonoAndroid10+MonoTouch10\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLite.Net.Core-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SQLite.Net.Async, Version=3.0.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLite.Net.Async-PCL.3.0.5\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.Async.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SQLite.Net.Platform.WinRT, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLite.Net-PCL.3.1.1\lib\portable-win81+wpa81\SQLite.Net.Platform.WinRT.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SQLiteNetExtensions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLiteNetExtensions.1.3.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\SQLiteNetExtensions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SQLiteNetExtensionsAsync, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLiteNetExtensions.Async.1.3.0\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\SQLiteNetExtensionsAsync.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\SQLite\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
