--- a/FinanceManager/packages.config
+++ b/FinanceManager/packages.config
@@ -7,4 +7,6 @@
   <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
   <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="wpa81" />
   <package id="Unity" version="4.0.1" targetFramework="wpa81" />
+  <package id="WinRTXamlToolkit.Controls.DataVisualization.WindowsPhone" version="1.8.1.0" targetFramework="wpa81" />
+  <package id="WinRTXamlToolkit.WindowsPhone" version="1.8.1.0" targetFramework="wpa81" />
 </packages>
