--- a/YanpixFinanceManager/packages.config
+++ b/YanpixFinanceManager/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
+  <package id="Jace" version="0.8.7" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="wpa81" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="wpa81" />
