--- a/YanpixFinanceManager/YanpixFinanceManager.csproj
+++ b/YanpixFinanceManager/YanpixFinanceManager.csproj
@@ -123,12 +123,14 @@
     <Compile Include="View\CategoriesPage.xaml.cs">
       <DependentUpon>CategoriesPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Common\Actions\CloseFlyoutAction.cs" />
     <Compile Include="View\Common\Converters\ActualSizePropertyProxy.cs" />
     <Compile Include="View\Common\Converters\BoolToRedGreenConverter.cs" />
     <Compile Include="View\Common\Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="View\Common\Converters\DateTimeToDateTimeOffsetConverter.cs" />
     <Compile Include="View\Common\Converters\DateTimeToStringConverter.cs" />
     <Compile Include="View\Common\Converters\DecimalConverter.cs" />
+    <Compile Include="View\Common\Converters\IntToTransactionTypeConverter.cs" />
     <Compile Include="View\Common\Converters\RightMarginConverter.cs" />
     <Compile Include="View\Common\Converters\WidthScaleConverter.cs" />
     <Compile Include="View\Common\ListBoxSelectionHelper.cs" />
